fix footer spacing

--- a/styles/css/charadex.css
+++ b/styles/css/charadex.css
@@ -488,6 +488,7 @@ body {
   padding: 0;
   -ms-flex: 1 1 auto !important;
   flex: 1 1 auto !important;
+  position: relative;
 }
 
 #main-card {
@@ -1094,13 +1095,13 @@ blockquote.star.star-bottom {
   background-position: left bottom;
   background-size: contain;
   background-repeat: no-repeat;
-  position: relative;
-  top: -80px;
+  position: absolute;
+  bottom: -113px;
   left: -40px;
-  height: 187px;
+  height: 190px;
   width: 100%;
   z-index: 10;
-  pointer-events: none; /* prevent collision issues */
+  pointer-events: none;
 }
 .script-footer h1 {
   position: relative;
